Use a proper button to work around display issues on iPhone.

--- a/ciupy3/checks/static/css/app.css
+++ b/ciupy3/checks/static/css/app.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
 }
 
-.check-form input {
+.check-form input, .check-form button {
     font-size: 120%;
     height: 60px;
     padding: 15px;
